# data-engineering-zoomcamp-solutions

./: README.md  solution_homework1.md
homework_module1/: notebook.ipynb  pyproject.toml  solution_homework1.md
